feat: add Chinese (zh-CN) and Traditional Chinese (zh-TW) language support with corresponding JSON files
feat: implement translation service using DeepSeek API for multilingual support

test: create API call test components for initialization, version info, and cache management

feat: enhance internationalization version management with detailed version comparison and refresh functionality

style: improve UI for version testing and API call testing components

--- a/src/utils/test-extract/languages/zh-CN.json
+++ b/src/utils/test-extract/languages/zh-CN.json
@@ -1,6 +1,6 @@
 {
   "login": {
-    "title": "登录系统",
+    "title": "登录系统1",
     "username": "账号",
     "password": "密码",
     "submit": "登录"
@@ -46,5 +46,8 @@
     "save": "保存",
     "cancel": "取消",
     "addLang": "新增语言"
+  },
+  "test": {
+    "message": "测试消息"
   }
 }
